Añadidas sección hero y sección tour

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <header>
         <img src="img/logo.avif" alt="kid Rock Logo" class="logo">
 
-
         <div class="menu">
             <nav class="nav-info">
                 <div class="login-nav">
@@ -42,11 +41,122 @@
                 <a href="#">About</a>
                 <a href="#">Store</a>
             </nav>
+
             <div class="nav-responsive" id="nav-responsive">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </div>
     </header>
+
+    <section class="hero">
+        <img src="img/slide-4-image.webp" alt="" class="hero-img">
+    </section>
+
+    <section class="tour">
+        <div class="tour-container">
+            <h2>Tour</h2>
+            <div class="show">
+                <div class="tour-date">
+                    <div class="month">APR</div>
+                    <div class="day">18</div>
+                </div>
+                <div class="tour-place">
+                    <p class="auditorium">Ryman <br> auditorium</p>
+                    <p class="city">Nashville, TN</p>
+                </div>
+                <button class="buy-tickets">Buy Tickets</button>
+            </div>
+            <div class="show">
+                <div class="tour-date">
+                    <div class="month">APR</div>
+                    <div class="day">18</div>
+                </div>
+                <div class="tour-place">
+                    <p class="auditorium">Ryman auditorium</p>
+                    <p class="city">Nashville, TN</p>
+                </div>
+                <button class="buy-tickets">Buy Tickets</button>
+            </div>
+            <div class="show">
+                <div class="tour-date">
+                    <div class="month">APR</div>
+                    <div class="day">18</div>
+                </div>
+                <div class="tour-place">
+                    <p class="auditorium">Ryman auditorium</p>
+                    <p class="city">Nashville, TN</p>
+                </div>
+                <button class="buy-tickets">Buy Tickets</button>
+            </div>
+            <div class="show">
+                <div class="tour-date">
+                    <div class="month">APR</div>
+                    <div class="day">18</div>
+                </div>
+                <div class="tour-place">
+                    <p class="auditorium">Ryman auditorium</p>
+                    <p class="city">Nashville, TN</p>
+                </div>
+                <button class="buy-tickets">Buy Tickets</button>
+            </div>
+            <div class="show">
+                <div class="tour-date">
+                    <div class="month">APR</div>
+                    <div class="day">18</div>
+                </div>
+                <div class="tour-place">
+                    <p class="auditorium">Ryman auditorium</p>
+                    <p class="city">Nashville, TN</p>
+                </div>
+                <button class="buy-tickets">Buy Tickets</button>
+            </div>
+            <div class="show">
+                <div class="tour-date">
+                    <div class="month">APR</div>
+                    <div class="day">18</div>
+                </div>
+                <div class="tour-place">
+                    <p class="auditorium">Ryman auditorium</p>
+                    <p class="city">Nashville, TN</p>
+                </div>
+                <button class="buy-tickets">Buy Tickets</button>
+            </div>
+            <div class="show">
+                <div class="tour-date">
+                    <div class="month">APR</div>
+                    <div class="day">18</div>
+                </div>
+                <div class="tour-place">
+                    <p class="auditorium">Ryman auditorium</p>
+                    <p class="city">Nashville, TN</p>
+                </div>
+                <button class="buy-tickets">Buy Tickets</button>
+            </div>
+            <div class="show">
+                <div class="tour-date">
+                    <div class="month">APR</div>
+                    <div class="day">18</div>
+                </div>
+                <div class="tour-place">
+                    <p class="auditorium">Ryman auditorium</p>
+                    <p class="city">Nashville, TN</p>
+                </div>
+                <button class="buy-tickets">Buy Tickets</button>
+            </div>
+            <div class="show">
+                <div class="tour-date">
+                    <div class="month">APR</div>
+                    <div class="day">18</div>
+                </div>
+                <div class="tour-place">
+                    <p class="auditorium">Ryman auditorium</p>
+                    <p class="city">Nashville, TN</p>
+                </div>
+                <button class="buy-tickets">Buy Tickets</button>
+            </div>
+        </div>
+        <div class="all-dates">All dates</div>
+    </section>
 
     <script src="main.js"></script>
     <script src="https://kit.fontawesome.com/71c79465ad.js" crossorigin="anonymous"></script>
