--- a/index.html
+++ b/index.html
@@ -158,6 +158,52 @@
         <div class="all-dates">All dates</div>
     </section>
 
+    <section class="news">
+        <h2>The latest</h2>
+        <div class="news-container">
+            <h3 class="section-news-title">News</h3>
+            <div class="news-post">
+                <div class="news-sign">News</div>
+                <img src="img/Static_Social-Instagram_1080x1080_KidRock_2023_Regional-AllDates_wsg-2.webp" alt="">
+                <p class="news-date">March 10, 2023</p>
+                <h3 class="news-title">Tickets on sale now!</h3>
+                <p class="news-description">Tickets for ALL shows are on sale NOW!</p>
+                <div class="news-text">
+                    <p>Austin, TX - June 23rd w/Chris Janson</p>                    
+                    <p>Fort Worth, TX - June 24th w/ Marcus King</p> 
+                    <p>Nashville, TN - July 1st & July 8th w/Travis Tritt</p> 
+                    <p>Detroit, MI - July 14th & 15th w/ Grand Funk Railroad</p> 
+                </div>
+            </div>
+            <div class="news-post">
+                <div class="news-sign">News</div>
+                <img src="img/Static_Social-Instagram_1080x1080_KidRock_2023_Regional-AllDates_wsg-2.webp" alt="">
+                <p class="news-date">March 10, 2023</p>
+                <h3 class="news-title">Tickets on sale now!</h3>
+                <p class="news-description">Tickets for ALL shows are on sale NOW!</p>
+                <div class="news-text">
+                    <p>Austin, TX - June 23rd w/Chris Janson</p>                    
+                    <p>Fort Worth, TX - June 24th w/ Marcus King</p> 
+                    <p>Nashville, TN - July 1st & July 8th w/Travis Tritt</p> 
+                    <p>Detroit, MI - July 14th & 15th w/ Grand Funk Railroad</p> 
+                </div>
+            </div>
+            <div class="news-post">
+                <div class="news-sign">News</div>
+                <img src="img/Static_Social-Instagram_1080x1080_KidRock_2023_Regional-AllDates_wsg-2.webp" alt="">
+                <p class="news-date">March 10, 2023</p>
+                <h3 class="news-title">Tickets on sale now!</h3>
+                <p class="news-description">Tickets for ALL shows are on sale NOW!</p>
+                <div class="news-text">
+                    <p>Austin, TX - June 23rd w/Chris Janson</p>                    
+                    <p>Fort Worth, TX - June 24th w/ Marcus King</p> 
+                    <p>Nashville, TN - July 1st & July 8th w/Travis Tritt</p> 
+                    <p>Detroit, MI - July 14th & 15th w/ Grand Funk Railroad</p> 
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="main.js"></script>
     <script src="https://kit.fontawesome.com/71c79465ad.js" crossorigin="anonymous"></script>
 </body>
