--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <img src="img/logo.avif" alt="kid Rock Logo" class="logo">
+        <img src="img/logo.avif" alt="Kid Rock Logo" class="logo">
 
         <div class="menu">
             <nav class="nav-info">
@@ -169,10 +169,10 @@
                 <h3 class="news-title">Tickets on sale now!</h3>
                 <p class="news-description">Tickets for ALL shows are on sale NOW!</p>
                 <div class="news-text">
-                    <p>Austin, TX - June 23rd w/Chris Janson</p>                    
-                    <p>Fort Worth, TX - June 24th w/ Marcus King</p> 
-                    <p>Nashville, TN - July 1st & July 8th w/Travis Tritt</p> 
-                    <p>Detroit, MI - July 14th & 15th w/ Grand Funk Railroad</p> 
+                    <p>Austin, TX - June 23rd w/Chris Janson</p>
+                    <p>Fort Worth, TX - June 24th w/ Marcus King</p>
+                    <p>Nashville, TN - July 1st & July 8th w/Travis Tritt</p>
+                    <p>Detroit, MI - July 14th & 15th w/ Grand Funk Railroad</p>
                 </div>
             </div>
             <div class="news-post">
@@ -182,10 +182,10 @@
                 <h3 class="news-title">Tickets on sale now!</h3>
                 <p class="news-description">Tickets for ALL shows are on sale NOW!</p>
                 <div class="news-text">
-                    <p>Austin, TX - June 23rd w/Chris Janson</p>                    
-                    <p>Fort Worth, TX - June 24th w/ Marcus King</p> 
-                    <p>Nashville, TN - July 1st & July 8th w/Travis Tritt</p> 
-                    <p>Detroit, MI - July 14th & 15th w/ Grand Funk Railroad</p> 
+                    <p>Austin, TX - June 23rd w/Chris Janson</p>
+                    <p>Fort Worth, TX - June 24th w/ Marcus King</p>
+                    <p>Nashville, TN - July 1st & July 8th w/Travis Tritt</p>
+                    <p>Detroit, MI - July 14th & 15th w/ Grand Funk Railroad</p>
                 </div>
             </div>
             <div class="news-post">
@@ -195,14 +195,50 @@
                 <h3 class="news-title">Tickets on sale now!</h3>
                 <p class="news-description">Tickets for ALL shows are on sale NOW!</p>
                 <div class="news-text">
-                    <p>Austin, TX - June 23rd w/Chris Janson</p>                    
-                    <p>Fort Worth, TX - June 24th w/ Marcus King</p> 
-                    <p>Nashville, TN - July 1st & July 8th w/Travis Tritt</p> 
-                    <p>Detroit, MI - July 14th & 15th w/ Grand Funk Railroad</p> 
+                    <p>Austin, TX - June 23rd w/Chris Janson</p>
+                    <p>Fort Worth, TX - June 24th w/ Marcus King</p>
+                    <p>Nashville, TN - July 1st & July 8th w/Travis Tritt</p>
+                    <p>Detroit, MI - July 14th & 15th w/ Grand Funk Railroad</p>
                 </div>
             </div>
         </div>
+        <a class="all-news" href="#">All news</a>
     </section>
+
+    <section class="multimedia">
+        <div class="multimedia-spotify">
+            <h2 class="multimedia-title">Music</h2>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/playlist/2jZsuaXKTGVMTbz9Nwjbdn?utm_source=generator" width="100%"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+            <a href="#" class="multimedia-more">All music</a>
+        </div>
+        <div class="multimedia-youtube">
+            <h2 class="multimedia-title">Videos</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/rKFx0MMqb48"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <a href="#" class="multimedia-more">All videos</a>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-social">
+            <h2>Kid Rock <span>Social</span></h2>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-twitter"></i>
+        </div>
+        <div class="email-list">
+            <h2>Join the <span>email list</span></h2>
+            <input type="text" name="" id="" placeholder="Enter your email">
+            <button>GO</button>
+        </div>
+    </footer>
 
     <script src="main.js"></script>
     <script src="https://kit.fontawesome.com/71c79465ad.js" crossorigin="anonymous"></script>
